--- a/packages/module-b/package.json
+++ b/packages/module-b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "module-b",
-  "version": "1.0.0",
+  "name": "@warsawjs-monorepo/module-b",
+  "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
