--- a/packages/module-a/package.json
+++ b/packages/module-a/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@warsawjs-monorepo/module-a",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "",
   "main": "lib/index.js",
   "author": "",
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@babel/cli": "^7.0.0-beta.42",
     "@babel/core": "^7.0.0-beta.42",
+    "@babel/preset-react": "^7.0.0-beta.42",
     "install": "^0.10.4",
     "npm": "^5.7.1"
   }
